util/destination-rule.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: epp-insecure-tls
spec:
  host: gaie-kv-events-epp.pytorch-conference-precise.svc.cluster.local
  trafficPolicy:
    connectionPool:
      http:
        http1MaxPendingRequests: 256000
        http2MaxRequests: 256000
        idleTimeout: 900s
        maxRequestsPerConnection: 256000
      tcp:
        connectTimeout: 900s
        maxConnectionDuration: 1800s
        maxConnections: 256000
    tls:
      insecureSkipVerify: true
      mode: SIMPLE
